[workspace]
members = [
  "dsf-core",
  "dsf-rpc",
  "dsf-client",
  "dsf-daemon",
  "dsf-iot",
  "dsf-dns",
  "rust-kad",
]

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[patch.crates-io]
dsf-core = { path = "./dsf-core" }
dsf-rpc = { path = "./dsf-rpc" }
dsf-client = { path = "./dsf-client" }
kad = { path = "./rust-kad" }

sodiumoxide = { git = "https://github.com/sodiumoxide/sodiumoxide", branch = "master" }
