[workspace]
members = [
  "dsf-client",
  "dsf-core",
  "dsf-daemon",
  "dsf-rpc",
  "dsf-engine",
  "dsf-iot",
#  "dsf-dns",
  "rust-kad",
]

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[patch.crates-io]
dsf-core = { path = "./dsf-core" }
dsf-rpc = { path = "./dsf-rpc" }
dsf-client = { path = "./dsf-client" }
dsf-engine = { path = "./dsf-engine" }
kad = { path = "./rust-kad" }

#sodiumoxide = { git = "https://github.com/sodiumoxide/sodiumoxide", branch = "master" }
#stor = { path = "../stor" }

#encdec = { path = "../encdec/core" }
#encdec-base = { path = "../encdec/base" }
#encdec-macros = { path = "../encdec/macros" }
